--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>React-emailgpt</title>
   <style>
-    .html{
-      font-family: 'Poppins';
+    .html {
+      font-family: open sans sans-serif;
     }
   </style>
 </head>
@@ -20,6 +20,12 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script>
+    // window.onerror = function (message, source, lineno, colno, error) {
+    //   console.error("Script Error:", message, source, lineno, colno, error);
+    // };
+
+  </script>
 </body>
 
 </html>
