--- a/test.html
+++ b/test.html
@@ -468,7 +468,8 @@
                                                                                             <a target="_blank"
                                                                                                 style="font-size: 13px;"
                                                                                                 href="https://viewstripo.email">Update
-                                                                                                Preferences</a></p>
+                                                                                                Preferences</a>
+                                                                                        </p>
                                                                                     </td>
                                                                                 </tr>
                                                                                 <tr>
